--- a/src/GIMI-ModManager.WinUI/Views/ModInstallerPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/ModInstallerPage.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <Page
-    x:Class="GIMI_ModManager.WinUI.Views.DebugPage"
+    x:Class="GIMI_ModManager.WinUI.Views.ModInstallerPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:GIMI_ModManager.WinUI.Views.Controls"
@@ -8,14 +8,21 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:GIMI_ModManager.WinUI.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:services="using:GIMI_ModManager.Core.Services"
     xmlns:viewModels="using:GIMI_ModManager.WinUI.ViewModels"
     mc:Ignorable="d">
+
+
 
     <Page.Resources>
 
         <converters:BoolNegationConverter x:Key="BoolNegationConverter" />
 
+        <MenuFlyout x:Name="ImageFlyout">
+            <MenuFlyoutItem
+                Command="{x:Bind ViewModel.ClearModPreviewImageCommand}"
+                Icon="Delete"
+                Text="Clear image" />
+        </MenuFlyout>
 
         <MenuFlyout x:Name="FileFlyout">
             <MenuFlyoutItem
@@ -29,10 +36,12 @@
                 Command="{x:Bind ViewModel.SetRootFolderCommand, Mode=OneWay}"
                 CommandParameter="{Binding}"
                 Text="Set Root Mod Folder" />
+            <!--  TODO: Enable Later  -->
             <MenuFlyoutItem
                 Command="{x:Bind ViewModel.SetShaderFixesFolderCommand}"
                 CommandParameter="{Binding}"
-                Text="Set ShaderFixes Folder" />
+                Text="Set ShaderFixes Folder"
+                Visibility="Collapsed" />
         </MenuFlyout>
 
         <DataTemplate x:Key="RootFolderTemplate" x:DataType="viewModels:RootFolder">
@@ -50,6 +59,7 @@
         <DataTemplate x:Key="FileSystemItemTemplate" x:DataType="viewModels:FileSystemItem">
             <TreeViewItem
                 IsExpanded="{x:Bind IsExpanded, Mode=TwoWay}"
+                IsSelected="{x:Bind IsSelected, Mode=TwoWay}"
                 ItemsSource="{x:Bind FileSystemItems, Mode=OneWay}"
                 Loaded="FrameworkElement_OnLoaded">
                 <Grid DoubleTapped="FileSystemItem_DoubleClicked">
@@ -83,10 +93,6 @@
 
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
         <ContentDialog
             x:Name="DuplicateModDialog"
             Title="A folder with the same name exists"
@@ -161,106 +167,149 @@
             </ContentDialog.Content>
         </ContentDialog>
 
-        <Button
-            Grid.Row="0"
-            Margin="0,8"
-            Command="{x:Bind ViewModel.SelectModDebugCommand}"
-            Content="Debug Select Mod Folder" />
 
-        <Grid x:Name="ModInstallRoot" Grid.Row="1">
+        <Grid x:Name="ModInstallRoot" Padding="8">
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition />
-            </Grid.RowDefinitions>
-
-            <StackPanel>
-                <TextBlock Text="Mod install" />
-            </StackPanel>
-
-            <Grid Grid.Row="1">
-
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
 
 
-                <ScrollViewer>
+            <!--<ScrollViewer Margin="0,0,4,0">-->
 
-                    <StackPanel MinWidth="350">
-                        <Image MinWidth="350" MaxHeight="800">
-                            <Image.Source>
-                                <BitmapImage UriSource="{x:Bind ViewModel.ModPreviewImagePath, Mode=OneWay}" />
-                            </Image.Source>
-                        </Image>
-                        <TextBox
-                            Header="Mod page url"
-                            IsReadOnly="{x:Bind ViewModel.IsRetrievingModInfo, Mode=OneWay}"
-                            KeyDown="UrlTextBox_KeyDown"
-                            PlaceholderText="Paste URL to auto populate fields (GameBanana only)"
-                            Text="{x:Bind ViewModel.ModUrl, Mode=TwoWay}" />
-                        <TextBox
-                            Header="Mod Custom Name"
-                            IsReadOnly="{x:Bind ViewModel.IsRetrievingModInfo, Mode=OneWay}"
-                            PlaceholderText="Custom Name display throughout JASM"
-                            Text="{x:Bind ViewModel.CustomName, Mode=TwoWay}" />
-                        <TextBox
-                            Header="Author"
-                            IsReadOnly="{x:Bind ViewModel.IsRetrievingModInfo, Mode=OneWay}"
-                            Text="{x:Bind ViewModel.Author, Mode=TwoWay}" />
-                        <RichEditBox MinHeight="100" Header="Description" />
+            <!--<StackPanel MinWidth="350">-->
 
+            <Grid Height="{x:Bind ModViewColumn.Height, Mode=OneWay}">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <Image
+                    MinWidth="350"
+                    MaxHeight="800"
+                    ContextFlyout="{StaticResource ImageFlyout}">
+                    <Image.Source>
+                        <BitmapImage UriSource="{x:Bind ViewModel.ModPreviewImagePath, Mode=OneWay}" />
+                    </Image.Source>
+                </Image>
+                <TextBox
+                    Grid.Row="1"
+                    Header="Mod page url"
+                    IsReadOnly="{x:Bind ViewModel.IsRetrievingModInfo, Mode=OneWay}"
+                    KeyDown="UrlTextBox_KeyDown"
+                    PlaceholderText="Paste URL to auto populate fields (GameBanana only)"
+                    Text="{x:Bind ViewModel.ModUrl, Mode=TwoWay}" />
+                <TextBox
+                    Grid.Row="2"
+                    Header="Mod Custom Name"
+                    IsReadOnly="{x:Bind ViewModel.IsRetrievingModInfo, Mode=OneWay}"
+                    PlaceholderText="Custom Name display throughout JASM"
+                    Text="{x:Bind ViewModel.CustomName, Mode=TwoWay}" />
+                <TextBox
+                    Grid.Row="3"
+                    Header="Author"
+                    IsReadOnly="{x:Bind ViewModel.IsRetrievingModInfo, Mode=OneWay}"
+                    Text="{x:Bind ViewModel.Author, Mode=TwoWay}" />
+                <TextBox
+                    Grid.Row="4"
+                    Height="100"
+                    AcceptsReturn="True"
+                    Header="Description"
+                    PlaceholderText="The description is currently not shown anywhere in JASM"
+                    Text="{x:Bind ViewModel.Description, Mode=TwoWay}" />
+            </Grid>
+
+            <!--</StackPanel>-->
+            <!--</ScrollViewer>-->
+
+
+            <!--
+                Folder overview
+                Select Root Mod Folder
+                Select ShaderFixes
+                Select Image
+            -->
+            <Grid
+                x:Name="ModViewColumn"
+                Grid.Column="1"
+                MinWidth="500">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <TreeView
+                    x:Name="ModFolderTree"
+                    CanDragItems="False"
+                    CanReorderItems="False"
+                    ItemTemplateSelector="{StaticResource ExplorerItemTemplateSelector}"
+                    ItemsSource="{x:Bind ViewModel.RootFolder, Mode=OneWay}" />
+                <!--  MinHeight="220"  -->
+
+                <StackPanel
+                    x:Name="ModFolderSelectionDetails"
+                    Grid.Row="1"
+                    Width="{x:Bind ModViewColumn.Width, Mode=OneWay}"
+                    VerticalAlignment="Top">
+
+                    <StackPanel Margin="0,8,0,12" Orientation="Horizontal">
+                        <FontIcon Margin="4,0" Glyph="{x:Bind ViewModel.RootFolderIcon}" />
+                        <TextBlock Margin="4,0" Text="ModFolder:" />
+                        <TextBlock Text="{x:Bind ViewModel.LastSelectedRootFolder.Name, Mode=OneWay, FallbackValue=Unknown}" />
+                        <FontIcon Margin="4,0" Glyph="&#xEA62;" />
+                        <TextBlock Text="{x:Bind ViewModel.ModCharacterName, Mode=OneWay}" />
                     </StackPanel>
-                </ScrollViewer>
 
 
-                <!--
-                    Folder overview
-                    Select Root Mod Folder
-                    Select ShaderFixes
-                    Select Image
-                -->
-                <Grid Grid.Column="1">
-
-                    <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-
-                    <TreeView
-                        CanDragItems="False"
-                        CanReorderItems="False"
-                        ItemTemplateSelector="{StaticResource ExplorerItemTemplateSelector}"
-                        ItemsSource="{x:Bind ViewModel.RootFolder, Mode=OneWay}" />
-
-                    <StackPanel Grid.Row="1">
-
-                        <StackPanel Margin="0,8,0,12" Orientation="Horizontal">
-                            <FontIcon Margin="4,0" Glyph="{x:Bind ViewModel.RootFolderIcon}" />
-                            <TextBlock Margin="4,0" Text="ModFolder:" />
-                            <TextBlock Text="{x:Bind ViewModel.LastSelectedRootFolder.Name, Mode=OneWay, FallbackValue=Unknown}" />
-                            <FontIcon Margin="4,0" Glyph="&#xEA62;" />
-                            <TextBlock Text="{x:Bind ViewModel.CharacterModList.Character.DisplayName}" />
-                        </StackPanel>
 
 
-                        <StackPanel Orientation="Horizontal">
-                            <FontIcon Margin="4,0" Glyph="{x:Bind ViewModel.SelectedImageIcon}" />
-                            <TextBlock Margin="4,0" Text="PreviewImage:" />
-                            <TextBlock Text="Auto" />
-                        </StackPanel>
-                        <StackPanel Margin="0,0,0,8" Orientation="Horizontal">
-                            <CheckBox
-                                Content="Auto"
-                                IsChecked="True"
-                                IsEnabled="False" />
-                            <CheckBox Content="Url" IsEnabled="False" />
-                            <CheckBox Content="Mod Files" IsEnabled="False" />
-                            <CheckBox Content="Ignore" IsEnabled="False" />
-                        </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <FontIcon Margin="4,0" Glyph="{x:Bind ViewModel.SelectedImageIcon}" />
+                        <TextBlock Margin="4,0" Text="PreviewImage:" />
+                        <TextBlock Text="Auto" />
+                    </StackPanel>
+                    <StackPanel
+                        Margin="0,0,0,8"
+                        Orientation="Horizontal"
+                        Visibility="Collapsed">
+                        <CheckBox
+                            Content="Auto"
+                            IsChecked="True"
+                            IsEnabled="False" />
+                        <CheckBox Content="Url" IsEnabled="False" />
+                        <CheckBox Content="Mod Files" IsEnabled="False" />
+                        <CheckBox Content="Ignore" IsEnabled="False" />
+                    </StackPanel>
 
+                    <TextBlock
+                        Padding="8"
+                        HorizontalAlignment="Left"
+                        Text="Here you can select the root of the mod folder."
+                        TextWrapping="WrapWholeWords" />
+
+                    <TextBlock
+                        Padding="8"
+                        HorizontalAlignment="Left"
+                        Text="This is usually the folder that contains the 'merged.ini' or '.JASM_ModConfig.json'.&#x0a;JASM will automatically detect the mod folder and the merged.ini file. If you want to manually select the mod folder, you can do so by right clicking the folder in the overview above. "
+                        TextWrapping="WrapWholeWords" />
+
+                    <TextBlock
+                        Padding="8"
+                        HorizontalAlignment="Left"
+                        Text="You can also manually select image file for the mod preview image. It's usually fine to just press 'Add Mod'"
+                        TextWrapping="WrapWholeWords" />
+
+
+
+                    <StackPanel Visibility="Collapsed">
 
                         <StackPanel Orientation="Horizontal">
                             <FontIcon Margin="4,0" Glyph="{x:Bind ViewModel.SelectedMergeIniIcon}" />
@@ -290,17 +339,21 @@
                             <CheckBox Content="Ignore" IsEnabled="False" />
                         </StackPanel>
 
-
                     </StackPanel>
 
-                    <Button
-                        Grid.Row="2"
-                        HorizontalAlignment="Right"
-                        Command="{x:Bind ViewModel.AddModCommand}"
-                        Content="Add Mod" />
+                </StackPanel>
 
 
-                </Grid>
+
+                <Button
+                    Grid.Row="2"
+                    HorizontalAlignment="Right"
+                    Command="{x:Bind ViewModel.AddModCommand}"
+                    Content="Add Mod">
+                    <Button.KeyboardAccelerators>
+                        <KeyboardAccelerator Key="S" Modifiers="Control" />
+                    </Button.KeyboardAccelerators>
+                </Button>
 
 
             </Grid>
@@ -310,4 +363,5 @@
 
 
     </Grid>
+
 </Page>
