Removed dead / unused code

--- a/src/GIMI-ModManager.WinUI/Views/DebugPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/DebugPage.xaml
@@ -12,302 +12,6 @@
     xmlns:viewModels="using:GIMI_ModManager.WinUI.ViewModels"
     mc:Ignorable="d">
 
-    <Page.Resources>
 
-        <converters:BoolNegationConverter x:Key="BoolNegationConverter" />
-
-
-        <MenuFlyout x:Name="FileFlyout">
-            <MenuFlyoutItem
-                Command="{x:Bind ViewModel.SetModPreviewImageCommand, Mode=OneWay}"
-                CommandParameter="{Binding}"
-                Text="Set mod preview image" />
-        </MenuFlyout>
-
-        <MenuFlyout x:Name="FolderFlyout">
-            <MenuFlyoutItem
-                Command="{x:Bind ViewModel.SetRootFolderCommand, Mode=OneWay}"
-                CommandParameter="{Binding}"
-                Text="Set Root Mod Folder" />
-            <MenuFlyoutItem
-                Command="{x:Bind ViewModel.SetShaderFixesFolderCommand}"
-                CommandParameter="{Binding}"
-                Text="Set ShaderFixes Folder" />
-        </MenuFlyout>
-
-        <DataTemplate x:Key="RootFolderTemplate" x:DataType="viewModels:RootFolder">
-            <TreeViewItem
-                DoubleTapped="RootFolder_DoubleClicked"
-                IsExpanded="True"
-                ItemsSource="{x:Bind FileSystemItems, Mode=OneWay}">
-                <StackPanel Orientation="Horizontal">
-                    <FontIcon Margin="0,0,4,0" Glyph="&#xED25;" />
-                    <TextBlock Text="{x:Bind Name}" />
-                </StackPanel>
-            </TreeViewItem>
-        </DataTemplate>
-
-        <DataTemplate x:Key="FileSystemItemTemplate" x:DataType="viewModels:FileSystemItem">
-            <TreeViewItem
-                IsExpanded="{x:Bind IsExpanded, Mode=TwoWay}"
-                ItemsSource="{x:Bind FileSystemItems, Mode=OneWay}"
-                Loaded="FrameworkElement_OnLoaded">
-                <Grid DoubleTapped="FileSystemItem_DoubleClicked">
-
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition />
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
-
-                    <FontIcon Margin="0,0,4,0" Glyph="{x:Bind LeftIcon, Mode=OneWay}" />
-
-
-                    <TextBlock Grid.Column="1" Text="{x:Bind Name}" />
-
-
-                    <StackPanel Grid.Column="2" Orientation="Horizontal">
-                        <FontIcon Margin="0,0,12,0" Glyph="{x:Bind RightIcon, Mode=OneWay}" />
-                    </StackPanel>
-
-                </Grid>
-            </TreeViewItem>
-        </DataTemplate>
-
-
-        <local:ExplorerItemTemplateSelector
-            x:Key="ExplorerItemTemplateSelector"
-            FileSystemItem="{StaticResource FileSystemItemTemplate}"
-            RootFolderTemplate="{StaticResource RootFolderTemplate}" />
-    </Page.Resources>
-
-
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <ContentDialog
-            x:Name="DuplicateModDialog"
-            Title="A folder with the same name exists"
-            CloseButtonText="Cancel"
-            DefaultButton="Primary"
-            IsPrimaryButtonEnabled="{x:Bind ViewModel.CanExecuteDialogCommand, Mode=OneWay}"
-            PrimaryButtonCommand="{x:Bind ViewModel.AddModDialogCommand, Mode=OneWay}"
-            PrimaryButtonText="{x:Bind ViewModel.PrimaryButtonText, Mode=OneWay}">
-            <ContentDialog.Content>
-                <Grid MinWidth="500">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-
-                    <InfoBar
-                        IsClosable="False"
-                        IsOpen="True"
-                        Message="1. You can choose to overwrite the old mod, deleting it.&#x0a;Or&#x0a;2. You can rename either the new or the old mod"
-                        Severity="Warning" />
-
-                    <Grid Grid.Row="1">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition />
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-
-
-                        <StackPanel Margin="4">
-                            <TextBlock Text="New Mod:" />
-                            <TextBox
-                                Margin="4"
-                                Header="Custom name"
-                                IsEnabled="{x:Bind ViewModel.OverwriteExistingMod, Mode=OneWay, Converter={StaticResource BoolNegationConverter}}"
-                                PlaceholderText="CustomName"
-                                Text="{x:Bind ViewModel.CustomName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                            <TextBox
-                                Margin="4"
-                                Header="Folder name"
-                                IsEnabled="{x:Bind ViewModel.OverwriteExistingMod, Mode=OneWay, Converter={StaticResource BoolNegationConverter}}"
-                                PlaceholderText="FolderName"
-                                Text="{x:Bind ViewModel.ModFolderName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                        </StackPanel>
-
-                        <StackPanel Grid.Column="1" Margin="4">
-                            <TextBlock Text="Other Mod:" />
-                            <TextBox
-                                Margin="4"
-                                Header="Custom name"
-                                IsEnabled="{x:Bind ViewModel.OverwriteExistingMod, Mode=OneWay, Converter={StaticResource BoolNegationConverter}}"
-                                PlaceholderText="CustomName"
-                                Text="{x:Bind ViewModel.DuplicateModCustomName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                            <TextBox
-                                Margin="4"
-                                Header="Folder name"
-                                IsEnabled="{x:Bind ViewModel.OverwriteExistingMod, Mode=OneWay, Converter={StaticResource BoolNegationConverter}}"
-                                PlaceholderText="FolderName"
-                                Text="{x:Bind ViewModel.DuplicateModFolderName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                            <controls:LinkButton Link="{x:Bind ViewModel.DuplicateModPath, Mode=OneWay}" Text="Open existing mod folder..." />
-                        </StackPanel>
-
-                    </Grid>
-
-                    <CheckBox
-                        Grid.Row="2"
-                        Margin="4"
-                        Content="Overwrite existing mod"
-                        IsChecked="{x:Bind ViewModel.OverwriteExistingMod, Mode=TwoWay}" />
-                </Grid>
-
-            </ContentDialog.Content>
-        </ContentDialog>
-
-        <Button
-            Grid.Row="0"
-            Margin="0,8"
-            Command="{x:Bind ViewModel.SelectModDebugCommand}"
-            Content="Debug Select Mod Folder" />
-
-        <Grid x:Name="ModInstallRoot" Grid.Row="1">
-
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition />
-            </Grid.RowDefinitions>
-
-            <StackPanel>
-                <TextBlock Text="Mod install" />
-            </StackPanel>
-
-            <Grid Grid.Row="1">
-
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-
-
-                <ScrollViewer>
-
-                    <StackPanel MinWidth="350">
-                        <Image MinWidth="350" MaxHeight="800">
-                            <Image.Source>
-                                <BitmapImage UriSource="{x:Bind ViewModel.ModPreviewImagePath, Mode=OneWay}" />
-                            </Image.Source>
-                        </Image>
-                        <TextBox
-                            Header="Mod page url"
-                            IsReadOnly="{x:Bind ViewModel.IsRetrievingModInfo, Mode=OneWay}"
-                            KeyDown="UrlTextBox_KeyDown"
-                            PlaceholderText="Paste URL to auto populate fields (GameBanana only)"
-                            Text="{x:Bind ViewModel.ModUrl, Mode=TwoWay}" />
-                        <TextBox
-                            Header="Mod Custom Name"
-                            IsReadOnly="{x:Bind ViewModel.IsRetrievingModInfo, Mode=OneWay}"
-                            PlaceholderText="Custom Name display throughout JASM"
-                            Text="{x:Bind ViewModel.CustomName, Mode=TwoWay}" />
-                        <TextBox
-                            Header="Author"
-                            IsReadOnly="{x:Bind ViewModel.IsRetrievingModInfo, Mode=OneWay}"
-                            Text="{x:Bind ViewModel.Author, Mode=TwoWay}" />
-                        <RichEditBox MinHeight="100" Header="Description" />
-
-                    </StackPanel>
-                </ScrollViewer>
-
-
-                <!--
-                    Folder overview
-                    Select Root Mod Folder
-                    Select ShaderFixes
-                    Select Image
-                -->
-                <Grid Grid.Column="1">
-
-                    <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-
-                    <TreeView
-                        CanDragItems="False"
-                        CanReorderItems="False"
-                        ItemTemplateSelector="{StaticResource ExplorerItemTemplateSelector}"
-                        ItemsSource="{x:Bind ViewModel.RootFolder, Mode=OneWay}" />
-
-                    <StackPanel Grid.Row="1">
-
-                        <StackPanel Margin="0,8,0,12" Orientation="Horizontal">
-                            <FontIcon Margin="4,0" Glyph="{x:Bind ViewModel.RootFolderIcon}" />
-                            <TextBlock Margin="4,0" Text="ModFolder:" />
-                            <TextBlock Text="{x:Bind ViewModel.LastSelectedRootFolder.Name, Mode=OneWay, FallbackValue=Unknown}" />
-                            <FontIcon Margin="4,0" Glyph="&#xEA62;" />
-                            <TextBlock Text="{x:Bind ViewModel.CharacterModList.Character.DisplayName}" />
-                        </StackPanel>
-
-
-                        <StackPanel Orientation="Horizontal">
-                            <FontIcon Margin="4,0" Glyph="{x:Bind ViewModel.SelectedImageIcon}" />
-                            <TextBlock Margin="4,0" Text="PreviewImage:" />
-                            <TextBlock Text="Auto" />
-                        </StackPanel>
-                        <StackPanel Margin="0,0,0,8" Orientation="Horizontal">
-                            <CheckBox
-                                Content="Auto"
-                                IsChecked="True"
-                                IsEnabled="False" />
-                            <CheckBox Content="Url" IsEnabled="False" />
-                            <CheckBox Content="Mod Files" IsEnabled="False" />
-                            <CheckBox Content="Ignore" IsEnabled="False" />
-                        </StackPanel>
-
-
-                        <StackPanel Orientation="Horizontal">
-                            <FontIcon Margin="4,0" Glyph="{x:Bind ViewModel.SelectedMergeIniIcon}" />
-                            <TextBlock Margin="4,0" Text="MergedIniFile Folder:" />
-                            <TextBlock Text="Auto" />
-                        </StackPanel>
-
-                        <StackPanel Margin="0,0,0,8" Orientation="Horizontal">
-                            <CheckBox
-                                Content="Auto"
-                                IsChecked="True"
-                                IsEnabled="False" />
-                        </StackPanel>
-
-                        <StackPanel Orientation="Horizontal">
-                            <FontIcon Margin="4,0" Glyph="{x:Bind ViewModel.ShaderFixesFolderIcon}" />
-                            <TextBlock Margin="4,0" Text="ShaderFixes Folder:" />
-                            <TextBlock Text="{x:Bind ViewModel.LastSelectedShaderFixesFolder.Name, Mode=OneWay, FallbackValue=Unknown}" />
-                        </StackPanel>
-
-                        <StackPanel Orientation="Horizontal">
-                            <CheckBox Content="Auto" IsEnabled="False" />
-                            <CheckBox
-                                Content="Manual Select"
-                                IsChecked="True"
-                                IsEnabled="False" />
-                            <CheckBox Content="Ignore" IsEnabled="False" />
-                        </StackPanel>
-
-
-                    </StackPanel>
-
-                    <Button
-                        Grid.Row="2"
-                        HorizontalAlignment="Right"
-                        Command="{x:Bind ViewModel.AddModCommand}"
-                        Content="Add Mod" />
-
-
-                </Grid>
-
-
-            </Grid>
-
-
-        </Grid>
-
-
-    </Grid>
+    <Grid />
 </Page>
