--- a/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:animations="using:CommunityToolkit.WinUI.UI.Animations"
     xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
+    xmlns:converters="using:CommunityToolkit.WinUI.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="using:GIMI_ModManager.WinUI.Models"
@@ -173,7 +174,8 @@
                     IsMultiSelectCheckBoxEnabled="False"
                     ItemsSource="{x:Bind ViewModel.DockPanelVM.Elements, Mode=TwoWay}"
                     SelectionChanged="Selector_OnSelectionChanged"
-                    SelectionMode="Multiple">
+                    SelectionMode="Multiple"
+                    Visibility="{x:Bind ViewModel.DockPanelVM.IsInitialized, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
                     <GridView.ItemTemplate>
                         <DataTemplate x:DataType="subVms:ElementIcon">
                             <ItemContainer
